--- a/index.html
+++ b/index.html
@@ -8,16 +8,35 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
+
   <body>
     <nav id="desktop-nav">
-      <div class="logo">John Doe</div>
+      <div class="logo">Brahm Josan</div>
       <div>
-        <ul class="navlinks">
+        <ul class="nav-links">
           <li><a href="about">About</a></li>
           <li>
             <a href="Contact">Contact</a>
           </li>
         </ul>
+      </div>
+    </nav>
+
+    <nav id="hamburger-nav">
+      <div class="logo">Brahm Josan</div>
+      <div class="hamburger-menu">
+        <div class="hamburger-icon" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+
+        <div class="menu-links">
+          <li><a href="about" onclick="toggleMenu()">About</a></li>
+          <li>
+            <a href="Contact" onclick="toggleMenu()">Contact</a>
+          </li>
+        </div>
       </div>
     </nav>
     <script src="script.js"></script>
