--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
         </div>
       </div>
     </nav>
+
+    <section id="profile">
+      <div class="Section__pic-container">
+        <img src="assets/dp.jpg" alt="brahm_dp" />
+      </div>
+      <div class="section_text">
+        <p class="section_text_p1">Hello, I'm</p>
+        <h1 class="title">Brahm</h1>
+        <p class="section_text_p2">Realtor</p>
+        <div class="btn-container">
+          <button class="btn btn-color-2" onclick="saveContact()">
+            Save Contact Info
+          </button>
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
