--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
             Save Contact Info
           </button>
         </div>
+        <div id="socials-container">
+          <img src="assets/insta.png" alt="my-insta" class="icon"
+          onclick="location.href=location"https://www.instagram.com/brahmsells/""/>
+          <img src="assets/linkedin.png" alt="my-linkedin" class="icon"
+          onclick="location.href=location"https://www.linkedin.com/in/brahm-josan-073120317/""/>
+        </div>
       </div>
     </section>
     <script src="script.js"></script>
