--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <h1 class="title">Brahm</h1>
         <p class="section_text_p2">Realtor</p>
         <div class="btn-container">
-          <button class="btn btn-color-2" onclick="saveContact()">
-            Save Contact Info
+          <button class="btn btn-color-1" onclick="saveContact()">
+            Save Contact
           </button>
         </div>
         <div id="socials-container">
