--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="menu-links">
           <li><a href="#about-section" onclick="toggleMenu()">About</a></li>
           <li>
-            <a href="Contact" onclick="toggleMenu()">Contact</a>
+            <a href="#contact-section" onclick="toggleMenu()">Contact</a>
           </li>
         </div>
       </div>
@@ -118,9 +118,7 @@
         <div>
           <p>
             Website developed by
-            <a
-              href="https://https://www.instagram.com/kabirvansh_/"
-              target="_blank"
+            <a href="https://www.instagram.com/kabirvansh_/" target="_blank"
               ><i>Kabirvansh</i></a
             >
           </p>
